[package]
name = "to_json_macro"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/adrian7123/to_json_macro"

[lib]
name = "to_json_macro"
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "1.0", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0"

futures = "=0.3.31"
mongodb = { version = "=3.1.0" }
indexmap = { version = "2.6.0", features = ["serde"] }
bson = "^2.13.0"
